openshift/operator-controller/manifests-experimental/23-networkpolicy-openshift-operator-controller-operator-controller-controller-manager.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: operator-controller-controller-manager
  namespace: openshift-operator-controller
spec:
  egress:
    - {}
  ingress:
    - ports:
        - port: 8443
          protocol: TCP
  podSelector:
    matchLabels:
      control-plane: operator-controller-controller-manager
  policyTypes:
    - Ingress
    - Egress
